fix consistent use of data type

--- a/submit/index.html
+++ b/submit/index.html
@@ -3855,11 +3855,11 @@
       <p>
         We hypothesized that the Column-TaBERT method would be able to encode
         more information with same token limit as TaBERT, thus producing better
-        results. However, the results indicate that the column datatype
-        performed worse than the cell datatype. This may be due to the fact that
+        results. However, the results indicate that the column data type
+        performed worse than the cell data type. This may be due to the fact that
         the structural design did not effectively enable the attention
-        mechanism. In TaBERT, the model has one datatype token placed just
-        before the cell value. In contrast, Column-TaBERT obtains the datatype
+        mechanism. In TaBERT, the model has one data type token placed just
+        before the cell value. In contrast, Column-TaBERT obtains the dat type
         only once and structures it as a normal cell value. Future experiments
         could explore ways to improve attention by altering this serialization
         design.
