fix consistency for data types

--- a/submit/index.html
+++ b/submit/index.html
@@ -3337,12 +3337,12 @@
       </div>
       <p>
         <b>(ii) Data Type: </b> The columns are divided into 5 groups based on
-        their data type: Boolean, Numeric, URL, short text and long text.
+        their data type: Boolean, Numeric, URL, Short Text and Long Text.
         Boolean columns contain only "yes" or "no" or "true" or "false" values,
         Numeric columns contain only numbers, and URL columns contain web
         addresses. All other columns are classified as text, and if the token in
-        the value is less than five, it is considered short text, otherwise, it
-        is long text. The results of each data type with micro-F1 score and distribution are
+        the value is less than five, it is considered Short Text, otherwise, it
+        is Long Text. The results of each data type with micro-F1 score and distribution are
         summarized in <i>Table 6a</i> for CTA and <i>Table 6b</i> for CPA.
       </p>
       <p>
@@ -3432,7 +3432,7 @@
               <td>12.5</td>
             </tr>
             <tr>
-              <td>Short text</td>
+              <td>Short Text</td>
               <td>82.52</td>
               <td>75.2</td>
             </tr>
