--- a/submit/index.html
+++ b/submit/index.html
@@ -899,7 +899,7 @@
           </ul>
         </li>
         <li class="toc-h2 toc-active">
-          <a href="#toc5"> 5. Experiment </a>
+          <a href="#toc5"> 5. Experimental Approach </a>
           <ul>
             <li>
               <a href="#toc5.1">5.1 Dataset</a>
@@ -922,7 +922,7 @@
               <a href="#toc6.1">6.1 Main Results</a>
             </li>
             <li>
-              <a href="#toc6.2">6.2 Ablation Study</a>
+              <a href="#toc6.2">6.2 Hyperparameter Tuning</a>
             </li>
             <li>
               <a href="#toc6.3">6.3 Error Analysis</a>
@@ -937,6 +937,9 @@
             </li>
             <li>
               <a href="#toc7.2">7.2 Conclusion</a>
+            </li>
+            <li>
+              <a href="#toc7.3">7.3 Acknowledgments</a>
             </li>
           </ul>
         </li>
@@ -1397,7 +1400,7 @@
         <a href="https://webdatacommons.org/structureddata/sotab/"
           >WDC Schema.org Table Annotation Benchmark (SOTAB)</a
         >[<a href="#toc9">1</a>] benchmark dataset. To ensure the
-        generalizability of our approach, we perform transfer learning to the
+        generalizability of our approach, we test our best serialization approaches on the 
         <a href="https://github.com/sunlab-osu/TURL/"
           >WikiTables dataset by TURL</a
         >[<a href="#toc12">3</a>]. The SOTAB benchmark is a collection of tables
@@ -1488,9 +1491,9 @@
         no warmup. We set a maximum token length of 512, used a window size of
         5, and a standard MP ratio of 0.5 for relevant serializations. We
         identify single-column serialization as the baseline configuration. For
-        the SOTAB benchmark, we formulated the task as a multi-label prediction
+        the SOTAB benchmark, we formulated the task as a multi-class prediction
         problem and used Cross Entropy loss. For the WikiTable dataset, we
-        formulated the task as a multi-class prediction problem and used Binary
+        formulated the task as a multi-label prediction problem and used Binary
         Cross Entropy loss. We evaluated the performance of our models using
         micro F1 scores for both datasets.
       </p>
@@ -1516,7 +1519,7 @@
         1000.
       </p>
       <p>
-        We conducted ablation studies for both CTA and CPA tasks to investigate
+        We conducted hyperparameter tunings for both CTA and CPA tasks to investigate
         the impact of different window sizes for Neighboring Column
         Serializations. We also experimented with different preprocessing
         methods, such as TUTA, median, and mean preprocessing for each promising
@@ -2255,8 +2258,8 @@
         For the additional experiments, we did not achieve improvement on Test
         F1 score. Notably for LongFormer model, further modifications on the
         model setup should be investigated. For the 2-step model, we achieve a
-        Test F1 Score of 96.73. Building on top of the schema prediction model,
-        the final ensembly of submodels by schema class achieved a Test F1 of
+        Test F1 Score of 96.73 for the schema type prediction model. Building on top of this model,
+        the final ensembly of submodels by schema class achieved a Test F1 Score of
         84.34. Upon further investigating, decoupling the first model and
         inserting test data with correct schema labels into respective submodel
         merely increased the final Test F1 score to 84.81.
@@ -2537,8 +2540,10 @@
         significantly improve the performance of table annotation tasks.
       </p>
       <span id="toc6.2"></span>
-      <h3>6.2 Ablation Study</h3>
+      <h3>6.2 Hyperparameter Tuning</h3>
+      <p>
 
+      </p>
       <div style="text-align: center" class="tg-wrap">
         <table class="tg">
           <caption>
@@ -3197,11 +3202,11 @@
         Neighboring Column Serializations are window size of 4 - 6. This
         indicates that a complete table structure with relevant columns is a
         suitable input for Language models in table annotation tasks. Notably,
-        we observed that the main difference between Neighboring Column
-        Serialization and DODUO lies in the structure of the input sequence.
+        we observed that the two main differences between Neighboring Column
+        Serialization and DODUO are the structure of the input sequence and the pretrained language model used.
         Specifically, our approach places the target column at the front of the
         input sequence to focus on it, while DODUO takes the entire table as
-        input.
+        input. We used RoBERTa model instead of BERT model used by DODUO.
       </p>
 
       <span id="toc6.3"></span>
@@ -3894,6 +3899,12 @@
         As table annotation using deep learning is still at its infancy, future
         works may include Longformer, Contrastive Learning or Large Language
         Models like ChatGPT.
+      </p>
+
+      <span id="toc7.3"></span>
+      <h3>7.3 Acknowledgments</h3>
+      <p>
+      	The authors acknowledge support by the state of Baden-Württemberg through bwHPC.
       </p>
 
       <span id="toc8"></span>
