Refine differnt parts in introduction and sectoin 4

--- a/submit/index.html
+++ b/submit/index.html
@@ -830,8 +830,8 @@
         and
         <a href="https://paperswithcode.com/task/columns-property-annotation"
           >Columns Property Annotation (CPA)</a
-        >. CTA involves predicting the column type, while CPA involves
-        predicting the column properties or relations. All of our experiments
+        >. CTA involves predicting the column type, while CPA  involves identifying 
+        relationships between different columns in a table . All of our experiments
         and code are available in our
         <a
           href="https://github.com/wbsg-uni-mannheim-students/table-annotation-using-deep-learning"
