add introduction to chapter 4 and 7

--- a/submit/index.html
+++ b/submit/index.html
@@ -1203,6 +1203,10 @@
       <span id="toc4"></span>
       <h2>4. Model</h2>
       <p>
+        Chapter 4 of this paper provides an overview of the deep learning models used for table annotation, 
+        as well as the data preprocessing, augmentation, and serialization techniques.
+      </p>
+      <p>
         A Transformer-based language models expect token (text) sequences as
         inputs. This translates to representing tables in text sequences,
         formally known as table serialization, for the tasks of CTA and CPA.
@@ -1255,6 +1259,10 @@
 
       <span id="toc4.2"></span>
       <h3>4.2 Serialization</h3>
+      <p>
+        In this work, we employ two distinct serialization techniques - Neighboring Column serialization and 
+        TaBERT serialization. In the following, we present an explanation of these techniques.
+      </p>
       <p>
         <b>(i) Neighboring Column:</b> The
         <em>Neighboring Column Serialization</em> technique utilizes adjacent
@@ -3845,6 +3853,9 @@
 
       <span id="toc7.1"></span>
       <h3>7.1 Discussion</h3>
+      This section is dedicated to the discussion of the WikiTable dataset and a Column-TaBERT serialization. 
+      The section concludes with a summary of the key points of the discussion and the potential implications 
+      for future research in the field of table annotation.
 
       <p><b>WikiTable dataset</b></p>
       <p>
