--- a/submit/index.html
+++ b/submit/index.html
@@ -830,8 +830,8 @@
         and
         <a href="https://paperswithcode.com/task/columns-property-annotation"
           >Columns Property Annotation (CPA)</a
-        >. CTA involves predicting the column type, while CPA  involves identifying 
-        relationships between different column pairs in a table. All of our experiments
+        >. CTA involves predicting the column type, while CPA involves identifying 
+        semantic column relationships between different column pairs in a table. All of our experiments
         and code are available in our
         <a
           href="https://github.com/wbsg-uni-mannheim-students/table-annotation-using-deep-learning"
@@ -952,8 +952,7 @@
       <p>
         <a href = "https://paperswithcode.com/task/column-type-annotation">Table annotation</a>
         is the task of annotating a table with terms/concepts from knowledge graph, 
-        database schema or vocabulary. This process is crucial for effective data search and
-        integration, especially since the web contains millions of tables available 
+        database schema or vocabulary. This process is crucial for data management including data quality control, data discovery, and schema matching process [<a href="#toc17">7</a>], especially since the web contains millions of tables available 
         on websites, public data portals, and encyclopedia such as Wikipedia.
         However, to utilize these tables, we need to understand their structure
         and schema, which can be challenging due to their heterogeneous or
