--- a/submit/index.html
+++ b/submit/index.html
@@ -1015,9 +1015,8 @@
       <span id="toc2.2"></span>
       <h3>2.2 Columns Property Annotation (CPA)</h3>
       <p>
-        CPA is a web data integration task and it plays a crucial role in
-        ensuring data quality control and schema matching [<a href="#toc17">7</a
-        >]. It aims to identify relationships between different columns in a
+        CPA is a web data integration task and it plays a crucial role in providing understanding in the semanntics of a table for better table understanding [<a href="#toc17">7</a
+        >]. It aims to identify semantic relationships between different columns in a
         table and can infer relationships that might not be immediately obvious.
         As illustrated in <i>Figure 1</i>, CPA can help to infer that the
         <b>"address" </b>column refers to the hotel's location.
